--- a/opencorpora/src/main/res/values/strings.xml
+++ b/opencorpora/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="label">OpenCorpora</string>
-    <string name="count_button_text">Count</string>
+    <string name="open_types_activity">Open types activity</string>
+    <string name="title_activity_types_activity">Доступные типы задач</string>
+    <string name="title_activity_tasks">TasksActivity</string>
 </resources>
