--- a/opencorpora/src/main/res/values/strings.xml
+++ b/opencorpora/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="label">OpenCorpora</string>
     <string name="count_button_text">Count</string>
+    <string name="push_me_button">Push me</string>
+    <string name="outputText_Error">ERROR</string>
 </resources>
